# Pico-player

./: .gitignore  .gitmodules  CMakeLists.txt  FreeRTOSConfig.h  README.md  compose.yaml  lwipopts.h  main.c  main.cpp  run_docker.sh
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
libs/: CMakeLists.txt
libs/include/fatfs/: ffconf.h
libs/include/messages/: messages.h  utils.h
libs/include/minimp3/: minimp3.h
libs/include/mp3_decoder/: mp3_decoder.h
libs/src/fatfs/: sdmm.c
libs/src/messages/: messages.cpp  utils.cpp
libs/src/mp3_decoder/: mp3_decoder.cpp
tests/: CMakeLists.txt  i2s_test.c  mp3_test.cpp  sd_test.c  sd_test.cpp  wifi_test.c
